nav bar feature

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-snowpack-app" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
+    
+    <script type="module" src="/dist/index.js"></script>
     <title>Blog App</title>
   </head>
   <body>
-    
-    <script type="module" src="/dist/index.js"></script>
-   <h1><a href="post-blog.html">dasd</a></h1>
+      <nav>
+        <a href="index.html">Home </a>
+        <a href="post-blog.html">Post Blog </a>
+        <a href="favourite-blogs.html">Favourite Blogs </a>
+        <a href="about.html">About Us </a>
+      </nav>    
   </body>
 </html>
