--- a/public/favourite-blogs.html
+++ b/public/favourite-blogs.html
@@ -5,14 +5,26 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <link rel="stylesheet" href="/style.css" />
     
     <script type="module" src="/dist/index.js"></script>
     <title>Blog App</title>
   </head>
   <body>
   
-  <h1>Favourites Blogs</h1>
+    <!-- NAVBAR -->
+      <nav>
+        <div class="logo">
+          <image src="images/logo.png" width="50px" height="50px"/>
+        </div>  
+        <div class="link-container">
+        <a href="index.html" class="hover-underline-animation">Home </a>
+        <a href="post-blog.html" class="hover-underline-animation">Post Blog </a>
+        <a href="favourite-blogs.html" class="hover-underline-animation">Favourite Blogs </a>
+        <a href="about.html" class="hover-underline-animation">About Us </a>
+        </div>
+      </nav>    
+    <!-- END NAVBAR-->
 
   </body>
   </html>
