--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,18 @@
     <title>Blog App</title>
   </head>
   <body>
+        <!-- NAVBAR -->
       <nav>
-        <a href="index.html">Home </a>
-        <a href="post-blog.html">Post Blog </a>
-        <a href="favourite-blogs.html">Favourite Blogs </a>
-        <a href="about.html">About Us </a>
+        <div class="logo">
+          <image src="images/logo.png" width="50px" height="50px"/>
+        </div>  
+        <div class="link-container">
+        <a href="index.html" class="hover-underline-animation">Home </a>
+        <a href="post-blog.html" class="hover-underline-animation">Post Blog </a>
+        <a href="favourite-blogs.html" class="hover-underline-animation">Favourite Blogs </a>
+        <a href="about.html" class="hover-underline-animation">About Us </a>
+        </div>
       </nav>    
+      <!-- END NAVBAR-->
   </body>
 </html>
