hero section building and change nav bar color

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,16 @@
     <meta name="description" content="Web site created using create-snowpack-app" />
     <link rel="stylesheet" href="/style.css" />
     
+    <!-- Font Awsome CDN-->
+     <link rel="stylesheet" 
+          href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <script type="module" src="/dist/index.js"></script>
     <title>Blog App</title>
   </head>
   <body>
         <!-- NAVBAR -->
+        
       <nav>
         <div class="logo">
           <image src="images/logo.png" width="50px" height="50px"/>
@@ -22,7 +27,22 @@
         <a href="favourite-blogs.html" class="hover-underline-animation">Favourite Blogs </a>
         <a href="about.html" class="hover-underline-animation">About Us </a>
         </div>
-      </nav>    
+      </nav>
       <!-- END NAVBAR-->
+
+
+      <!-- HERO SECTION-->
+        <div class="hero-section">
+          <image src="images/heroImage.jpeg" >
+          <div class="input-container">
+           <i class="fas fa-search"></i>
+              <input type="text" placeholder="Enter Blog name ">
+          </div>
+        </div>
+      <!-- HERO SECTION-->
+
+      <div>
+        <p>dasdas</p>
+      </div>
   </body>
 </html>
