--- a/public/about.html
+++ b/public/about.html
@@ -25,8 +25,19 @@
         </div>
       </nav>    
     <!-- END NAVBAR-->
-
-  
+    
+    
+   
+      <!--Footer -->
+        <footer>
+          <p>Contact us</p>
+          <form class="contact-form">
+            <label>Nmae:</label>
+            <input type="text" placeholder="Enter Your name" id="contact-name">
+            <button type="submit"> Send </button>
+          </form>
+        </footer>
+      <!--End Footer -->
 
   </body>
   </html>
