--- a/public/favourite-blogs.html
+++ b/public/favourite-blogs.html
@@ -26,5 +26,17 @@
       </nav>    
     <!-- END NAVBAR-->
 
+     
+       <!--Footer -->
+        <footer>
+          <p>Contact us</p>
+          <form class="contact-form">
+            <label>Nmae:</label>
+            <input type="text" placeholder="Enter Your name" id="contact-name">
+            <button type="submit"> Send </button>
+          </form>
+        </footer>
+      <!--End Footer -->
+
   </body>
   </html>
