--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="/style.css" />
     
     <!-- Font Awsome CDN-->
-     <link rel="stylesheet" 
-          href=
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!-- TypeScript file-->
     <script type="module" src="/dist/index.js"></script>
     <title>Blog App</title>
   </head>
@@ -30,19 +29,26 @@
       </nav>
       <!-- END NAVBAR-->
 
-
       <!-- HERO SECTION-->
         <div class="hero-section">
           <image src="images/heroImage.jpeg" >
           <div class="input-container">
-           <i class="fas fa-search"></i>
+          <i class="fas fa-search"></i>
               <input type="text" placeholder="Enter Blog name ">
           </div>
         </div>
       <!-- HERO SECTION-->
 
-      <div>
-        <p>dasdas</p>
-      </div>
+      <!--Footer -->
+        <footer>
+          <p>Contact us</p>
+          <form class="contact-form">
+            <label>Nmae:</label>
+            <input type="text" placeholder="Enter Your name" id="contact-name">
+            <button type="submit"> Send </button>
+          </form>
+        </footer>
+      <!--End Footer -->
+   
   </body>
 </html>
