--- a/public/post-blog.html
+++ b/public/post-blog.html
@@ -25,5 +25,18 @@
           </div>
         </nav>    
       <!-- END NAVBAR-->
+
+
+       <!--Footer -->
+        <footer>
+          <p>Contact us</p>
+          <form class="contact-form">
+            <label>Nmae:</label>
+            <input type="text" placeholder="Enter Your name" id="contact-name">
+            <button type="submit"> Send </button>
+          </form>
+        </footer>
+      <!--End Footer -->
+      
   </body>
 </html>
