post-blog styling

--- a/public/post-blog.html
+++ b/public/post-blog.html
@@ -25,9 +25,39 @@
           </div>
         </nav>    
       <!-- END NAVBAR-->
+      
+      <div class = "post-blog">
+          <form class="post-blog-submit">
+            <div class = "upload-photo">
+              <input type="file"/> 
+            </div>
 
+            <div class="blog-details">
+              <div>
+                <label>
+                Blog title
+                </label>
+                <input type="text"/>
+              </div>
 
-       <!--Footer -->
+              <div>
+                <label>
+                  Author Name
+                </label>
+                <input type="text"/>
+              </div>
+
+            </div>
+            <div>
+              <textarea  rows="20" cols="102" >
+              </textarea>
+            </div>
+            </div>
+            <button class = "post-btn">Post</button> 
+          </form>
+        </div>
+
+      <!--Footer -->
         <footer>
           <p>Contact us</p>
           <form class="contact-form">
