create blog-list and text-editor

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- Font Awsome CDN-->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- TypeScript file-->
-    <script type="module" src="/dist/index.js"></script>
+    <script type="module" src="/dist/index.js" defer></script>
     <title>Blog App</title>
   </head>
   <body>
@@ -23,7 +23,6 @@
           <a href="index.html" class="hover-underline-animation">Home </a>
           <a href="post-blog.html" class="hover-underline-animation">Post Blog </a>
           <a href="favourite-blogs.html" class="hover-underline-animation">Favourite Blogs </a>
-          <a href="about.html" class="hover-underline-animation">About Us </a>
           </div>
         </nav>
       <!-- END NAVBAR-->
@@ -33,13 +32,13 @@
           <image src="images/heroImage.jpeg" >
           <div class="input-container">
           <i class="fas fa-search"></i>
-              <input type="text" placeholder="Enter Blog name ">
+              <input type="text" placeholder="Enter Blog name" id="search-blogs">
           </div>
         </div>
       <!-- End HERO SECTION-->
 
       <!-- Blog Card -->
-      <div class="card">
+      <div class="blog-card">
         <div class="card-header">
           <img src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg" alt="rover" />
         </div>
