--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
         <div class="hero-section">
           <image src="images/heroImage.jpeg" >
           <div class="input-container">
-          <i class="fas fa-search"></i>
-              <input type="text" placeholder="Enter Blog name" id="search-blogs">
+          <i class="fas fa-search" id="search-icon"></i>
+              <input type="text" placeholder="Enter Blog name " id="search-blogs">
           </div>
         </div>
       <!-- End HERO SECTION-->
