--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,14 @@
         <div class="hero-section">
           <image src="images/heroImage.jpeg" >
           <div class="input-container">
-          <i class="fas fa-search" id="search-icon"></i>
+          <i class="fas fa-search" id="search"></i>
               <input type="text" placeholder="Enter Blog name " id="search-blogs">
           </div>
         </div>
       <!-- End HERO SECTION-->
 
       <!-- Blog Card -->
+    <div class="card-container">
       <div class="blog-card">
         <div class="card-header">
           <img src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg" alt="rover" />
@@ -51,15 +52,9 @@
           <p>
             An exploration into the truck's polarising design
           </p>
-          <div class="user">
-            <img src="https://yt3.ggpht.com/a/AGF-l7-0J1G0Ue0mcZMw-99kMeVuBmRxiPjyvIYONg=s900-c-k-c0xffffffff-no-rj-mo" alt="user" />
-            <div class="user-info">
-              <h5>July Dec</h5>
-              <small>2h ago</small>
-            </div>
-          </div>
         </div>
       </div>
+    </div>
       <!-- Blog Card -->
       <!--Footer -->
         <footer>
