--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         <div class="hero-section">
           <image src="images/heroImage.jpeg" >
           <div class="input-container">
-          <i class="fas fa-search" id="search"></i>
+          <i class="fas fa-search" id="search-input"></i>
               <input type="text" placeholder="Enter Blog name " id="search-blogs">
           </div>
         </div>
