submit form handling

--- a/public/post-blog.html
+++ b/public/post-blog.html
@@ -110,7 +110,7 @@
                   </div>
                 </div>
               </div>
-              <button class = "post-btn">Post</button> 
+              <button class = "post-btn" type="submit">Post</button>
               </div>
             </form>
           </div>
